--- a/src/style.scss
+++ b/src/style.scss
@@ -1,19 +1,5 @@
-.container{
-  width:50px;
-  height:50px;
-  animation: my-animation 1s linear infinite;
-}
-.border{
-  border:5px solid white;
-  border-right: 5px solid blue;
-  border-radius: 50%;
-}
-.spinner{
-  width:50px;
-  height:50px;
-  animation: my-animation 10s linear infinite;
-}
-@keyframes my-animation {
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script:regular,500,600,700);
+@keyframes rotation {
   0% {
       rotate: 0deg;
   }
@@ -24,4 +10,76 @@
       rotate:360deg;
   }
 }
+@keyframes dilate {
+  0% {
+    scale: 100%;
+  }
+  50% {
+    scale: 200%;
+  }
+  100% {
+    scale: 100%;
+  }
+}
+@keyframes change_color {
+  0% {
+    color: red;
+  }
+  50% {
+    color: blue;
+  }
+  100% {
+    color: red;
+  }
+}
+@keyframes turn {
+  0% {
+    rotate: 0deg;
+  }
+  100% {
+    rotate: 360deg;
+  }
+}
 
+
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  height: 100%;
+}
+
+.container{
+  width:50px;
+  height:50px;
+  animation: rotation 1s linear infinite;
+}
+.border{
+  border:5px solid white;
+  border-right: 5px solid blue;
+  border-radius: 50%;
+}
+.spinner{
+  width:50px;
+  height:50px;
+  animation: rotation 1s linear infinite;
+}
+body{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
+.centered_div{
+  font-family:'Dancing Script';
+  font-size: 5em;
+  animation: dilate 5s linear infinite, change_color 5s linear infinite;
+}
+.centered_div:hover{
+  animation: dilate 5s linear infinite, change_color 5s linear infinite, turn 1s linear;
+}
